Transaction ID and user details updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <a href="/user">Account details</a>
+  <a href="/user-profile">Details</a>
   <div class="container">
     <h1>Frame Shop</h1>
     <p>$50</p>
@@ -26,7 +26,7 @@
         <p>Transaction ID: <span id="transaction-id"></span></p>
       </div>
     </div>
-    
+
   </div>
 </body>
 </html>
