--- a/public/stylesheets/user-profile-style.css
+++ b/public/stylesheets/user-profile-style.css
@@ -1,11 +1,22 @@
-body {
-  background-color: #f0f0f0;
-  margin: 0;
-  padding: 0;
+body{
+  background-color: #f0f0f0; 
+}
+
+.header-container {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.header-container a {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+  font-size: 18px;
+  margin: 0 20px; 
 }
 
 .page {
-  background-color: #fff;
+  background-color: white;;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 20px;
@@ -13,28 +24,11 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 h2 {
   font-size: 24px;
   color: #333;
-  margin-bottom: 20px;
-}
-
-.message {
-  font-size: 18px;
-  color: #555;
-  margin: 10px 0;
-  white-space: pre-line;
-}
-
-a {
-  text-decoration: none;
-  color: #007bff;
-  font-weight: bold;
-  font-size: 18px;
-  display: inline-block; /* Alterado para que os links fiquem na mesma linha */
-  margin-right: 20px; /* Espaço entre os links */
   margin-bottom: 20px;
 }
