--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   <div class="container">
     <h1>Frame Shop</h1>
     <p>$50</p>
-    <img src="https://images.unsplash.com/photo-1520045892732-304bc3ac5d8e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+    <img src="https://images.unsplash.com/photo-1520045892732-304bc3ac5d8e?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="skateboard image">
     <p> Picture of Sk8 grind taken in the streets of Slovakia</p>
     <p>Ref: #2352</p>
     <div id="paypal"></div>
