--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Frame shop</title>
-  <script src="https://www.paypal.com/sdk/js?client-id=<%= paypalClientId %>"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=<%= paypalClientId %>&components=buttons"></script>
   <script src="/script.js" defer></script>
 
 </head>
