--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Frame shop</title>
   <script src="https://www.paypal.com/sdk/js?client-id=<%= paypalClientId %>&components=buttons" data-namespace="paypal_sdk"></script>
-  <script src="/script.js" defer></script>
+  <script src="/script.js"></script>
 
 </head>
 <body>
