--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 
     <div id="paypal-container">
       <div id="message" class="hidden">
-        <p>Transaction successful</p>
+        <p>Thank you! Transaction successful</p>
         <p>Transaction ID: <span id="transaction-id"></span></p>
       </div>
     </div>
