--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,8 @@
     <p> Picture of Sk8 grind taken in the streets of Slovakia</p>
     <p>Ref: #2352</p>
     <div id="paypal"></div>
+    <script>paypal.Buttons().render('#paypal')</script>
+
 
     <div id="paypal-container">
       <div id="message" class="hidden">
