--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Frame shop</title>
-  <script src="https://www.paypal.com/sdk/js?client-id=<%= paypalClientId %>&components=buttons" data-namespace="paypal_sdk"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=<%= paypalClientId %>"></script>
   <script src="/script.js"></script>
 
 </head>
@@ -22,7 +22,7 @@
 
     <div id="paypal-container">
       <div id="message" class="hidden">
-        <p>Thank you! Transaction successful</p>
+        <p>Thank you for your order!</p>
         <p>Transaction ID: <span id="transaction-id"></span></p>
       </div>
     </div>
